# zephyr-nucleo-h723zg-hello-world

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  prj.conf  validate.sh
boards/: native_sim.conf
src/: main.c  trace_hooks.c
